--- a/app/src/main/res/layout/fragment_edit_contact.xml
+++ b/app/src/main/res/layout/fragment_edit_contact.xml
@@ -10,64 +10,73 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/avatar"
+        app:layout_constraintBottom_toTopOf="@id/contact_linear_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
-
-    <TextView
-        android:id="@+id/name_text"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/contact_linear_layout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="@string/name"
-        android:textColor="@color/green_700"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/update_contact_button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image" />
+        app:layout_constraintTop_toBottomOf="@id/image">
+
+        <TextView
+            android:id="@+id/name_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="@string/name"
+            android:textColor="@color/green_700"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
 
-    <EditText
-        android:id="@+id/caller_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints="New Name"
-        android:hint="@string/new_name"
-        android:textColor="?android:textColorTertiary"
-        android:inputType="text"
-        android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/name_text"
-        tools:text="Nuta Dumbrava" />
+        <EditText
+            android:id="@+id/caller_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="New Name"
+            android:hint="@string/enter_the_name_here"
+            android:inputType="text"
+            android:textColor="?android:textColorTertiary"
+            android:textColorHint="@color/red"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
 
-    <TextView
-        android:id="@+id/number_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="@string/mobile"
-        android:textColor="@color/green_700"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/caller_name" />
+        <TextView
+            android:id="@+id/number_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="@string/mobile"
+            android:textColor="@color/green_700"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/caller_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints="New number"
-        android:inputType="number"
-        android:textSize="30sp"
-        android:textColor="?android:textColorTertiary"
-        app:layout_constraintTop_toBottomOf="@id/number_text"
-        tools:text="0043 560 3002 200" />
+        <EditText
+            android:id="@+id/caller_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="New number"
+            android:hint="@string/enter_the_number_here"
+            android:inputType="number"
+            android:textColor="?android:textColorTertiary"
+            android:textColorHint="@color/red"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </LinearLayout>
 
 
     <Button
@@ -83,6 +92,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/caller_number" />
+        app:layout_constraintTop_toBottomOf="@id/contact_linear_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
