--- a/app/src/main/res/layout/fragment_recent_calls.xml
+++ b/app/src/main/res/layout/fragment_recent_calls.xml
@@ -15,6 +15,7 @@
         android:visibility="invisible">
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
