--- a/app/src/main/res/layout/confirm_delete_dialog.xml
+++ b/app/src/main/res/layout/confirm_delete_dialog.xml
@@ -16,7 +16,7 @@
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Are you sure you want to delete Michael?" />
+        tools:text="Hei Deni.                             Ce mai faci? :))" />
 
     <LinearLayout
         android:layout_width="match_parent"
